fix(button): add vertical-align:middle to icon inside button

--- a/assets/css/elements/buttons/_buttons.scss
+++ b/assets/css/elements/buttons/_buttons.scss
@@ -110,4 +110,8 @@
     cursor: auto;
   }
 
+  i {
+    vertical-align: middle;
+  }
+
 }
